--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
     <h1 id="titulo">Lista de Tarefas da Lyvia</h1>
 
     <!--formulario-->
-    <form action="" class="input-section">
+    <div class="input-section">
         <!--input para adicionar tarefa com texto dentro do input (placeholder)-->
         <input type="text" placeholder="Adicione aqui a tarefa..." id="tarefa">
         <!--botão de envio da tarefa-->
         <button id="btnAdd"> Adicionar tarefa</button>
-    </form>
+    </div>
+    <div class="todo-list">
+        <ul id="taskList">
+    
+        </ul>
+    
 </div>
-<div class="todo-list">
-    <ul id="taskList">
-
-    </ul>
-
 </div>
 
 <script src="script.js"></script>
